--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,14 +7,17 @@ jobs:
   darwin-test:
     runs-on: macos-latest
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest
       - uses: actions/checkout@v2
       - name: Darwin build & test
         run: swift test --skip IntegrationTests
   linux-build:
     runs-on: ubuntu-latest
+    container:
+      image: swift:latest
     steps:
-      - uses: fwal/setup-swift@v1
       - uses: actions/checkout@v2
       - name: Linux build
         run: swift build --target HaystackClientNIO
