--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
   push: { branches: [ main ] }
 
 jobs:
-  darwin-test:
+  macos-test:
     runs-on: macos-latest
     steps:
       - uses: maxim-lobanov/setup-xcode@v1
@@ -13,11 +13,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Darwin build & test
         run: swift test --skip IntegrationTests
-  linux-build:
+  linux-test:
     runs-on: ubuntu-latest
     container:
       image: swift:latest
     steps:
       - uses: actions/checkout@v2
-      - name: Linux build
-        run: swift build --target HaystackClientNIO
+      - name: Linux build & test
+        run: swift test --skip IntegrationTests
